WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91934
Missing *explicit* keyword in storage and workers
https://bugs.webkit.org/show_bug.cgi?id=91934
Summary
Missing *explicit* keyword in storage and workers
Gyuyoung Kim
Reported
2012-07-21 17:34:19 PDT
Some constructors missed to use *explicit* keyword. They need to be added *explicit* keyword to contructor which has a parameter in order to avoid implicit type conversion.
Attachments
Patch
(6.73 KB, patch)
2012-07-21 17:36 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2012-07-21 17:36:24 PDT
Created
attachment 153680
[details]
Patch
Kentaro Hara
Comment 2
2012-07-22 16:49:16 PDT
Comment on
attachment 153680
[details]
Patch Good refactoring.
WebKit Review Bot
Comment 3
2012-07-22 18:27:55 PDT
Comment on
attachment 153680
[details]
Patch Clearing flags on attachment: 153680 Committed
r123305
: <
http://trac.webkit.org/changeset/123305
>
WebKit Review Bot
Comment 4
2012-07-22 18:28:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug