Missing *explicit* keyword in storage and workers. https://bugs.webkit.org/show_bug.cgi?id=91934

Reviewed by Kentaro Hara.

Some constructors missed to use *explicit* keyword. They need to be added
*explicit* keyword to contructor which has a parameter in order to avoid
implicit type conversion.

No new tests. Convered by existing tests.

* storage/StorageAreaImpl.h:
(StorageAreaImpl):
* storage/StorageMap.h:
(StorageMap):
* storage/StorageSyncManager.h:
(StorageSyncManager):
* storage/StorageTask.h:
(StorageTask):
* storage/StorageTracker.h:
(StorageTracker):
* workers/SharedWorker.h:
(SharedWorker):
* workers/Worker.h:
(Worker):
* workers/WorkerLocation.h:
(WebCore::WorkerLocation::WorkerLocation):
* workers/WorkerMessagingProxy.h:
(WorkerMessagingProxy):


Canonical link: https://commits.webkit.org/109759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123305 268f45cc-cd09-0410-ab3c-d52691b4dbfc